tests/paczka2/big_fuzzy/38533672.err
Error in line 1: 69k3Sk08dPx A602 12,6
Error in line 6: 69k3Sk08dPx S752 62,1
Error in line 2: 1Xoi S752 60,5
Error in line 15: S18 S752 68,7
Error in line 10: 1Xoi S18 5,0
Error in line 17: S18 S18 79,1
Error in line 26: 9wYHykgkJA S731 79,7
Error in line 25: 69k3Sk08dPx S731 54,8
Error in line 54: 69k3Sk08dPx A602 34,5
Error in line 55: 69k3Sk08dPx S752 99,5
Error in line 86: S18 A602 6,23
Error in line 82: 9wYHykgkJA S752 68,7
Error in line 78: XCzu S731 88,4
Error in line 92: 69k3Sk08dPx S18 98,3
Error in line 99: 1Xoi S18 41,2
Error in line 96: 69k3Sk08dPx A602 9,2
Error in line 108: EqcZ8hUNq S18 55,9
Error in line 115: 69k3Sk08dPx S731 -3,8
Error in line 106: 69k3Sk08dPx S731 72,3
Error in line 111: S18 S731 13,2
Error in line 117: 69k3Sk08dPx A602 47,9
Error in line 123: 9wYHykgkJA A602 9,8
Error in line 138: XCzu S18 5,6
Error in line 144: lrxU6AsjfQ S18 80,4
Error in line 149: XCzu S752 14,7
Error in line 152: 9wYHykgkJA S18 9,2
Error in line 157: 9wYHykgkJA S731 27,5
Error in line 162: 1Xoi A602 29,2
Error in line 169: 1Xoi S731 16,3
Error in line 170: S18 A602 12,2
Error in line 198: 1Xoi S18 45,4
Error in line 203: 9wYHykgkJA A602 40,4
Error in line 213: 9wYHykgkJA S18 61,5
Error in line 231: XCzu A6+2 25,1
Error in line 241: EqcZ8hUNq A602 84,3
Error in line 242: EqcZ8hUNq S731 18,9
Error in line 245: XCzu S18 25,73
